Fixed Chat Profile icon and Dark Mode Theme Issues

--- a/src/colors/variables.scss
+++ b/src/colors/variables.scss
@@ -130,6 +130,22 @@ body.dark {
   color: white !important;
 }
 
+.chat-name {
+  color: var(--text-color) !important;
+}
+
+.button {
+  color: #fff !important;
+}
+
+.about {
+  color: var(--text-color) !important;
+}
+
+.side-container-body-content {
+  color: var(--name-text) !important;
+}
+
 .header-profile-name {
   color: var(--text-color) !important;
 }
